--- a/server/views/schedule.jade
+++ b/server/views/schedule.jade
@@ -140,3 +140,4 @@ html
 
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
+    .overlay
