--- a/server/views/course_search.jade
+++ b/server/views/course_search.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Professors
+    title Maple Donut - Course Search
 
     // 1,2 - CSS BOOTSTRAP LINK
-    // 3 - CUSTOM CSS LINKS
+    // 3 - CUSTOM CSS LINK
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/professors.css')
+    link(rel='stylesheet' href='/stylesheets/courses.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -78,7 +78,7 @@ html
                 li
                   a(href='courses') Current Courses
                 li
-                  a(href='#') Search Courses
+                  a(href='course_search') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-question-circle
@@ -100,7 +100,7 @@ html
                 li
                   a(href='discussions') Discussion Board
                 li
-                  a(href='#') Group Chats
+                  a(href='chat') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -113,7 +113,7 @@ html
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-ml
+        nav.navbar.navbar-expand-md
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
@@ -121,29 +121,28 @@ html
               a(href='Home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
-      #content
-        h3.text-center Schedule for #{locals.teacher}
+        #content
+          #courseContainer
+            h3.text-center Search Courses
+            .d-flex.justify-content-center.h-100
+              .container.h-100
+                .d-flex.justify-content-center.h-100
+                  .searchBar(id='search_bar')
+                    form(action='/course_search' method='post')
+                      input.searchInput(id='search_input' name='course' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
+                      button.searchIcon(type='submit')
+                        i.fas.fa-search
 
-        hr
-        .d-flex.justify-content-center
-        .searchResultContainer
-        if locals.course[0].course_name != Null
-          for session in locals.course
-            .card
-              .cardContainer
-                  h4.text-center #{session.course_name}
-                  h3.text-center #{session.available_day}
-                  h4.text-center #{session.from_time}
-                  h4.text-center -
-                  h4.text-center #{session.to_time}
+          if locals.data != Null
+            hr
+            h3.text-center Results:
+            .d-flex.justify-content-center
+                for courses in locals.data
+                  .card(id='courseCard')
+                    .cardContainer(id='courseCardContainer')
+                      a(href='professors/'+courses.course_name) #{courses.course_name}
 
-        else
-          .d-flex.justify-content-center
-          .searchResultContainer
-          .card
-            .cardContainer
-              h4.text-center No sessions are currently available for this week
 
+    .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
-    .overlay
