cleaned upped and fixed some shit
cleaned up the google auth stuff into google.js and fixed profile stuff and added it to every page

--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -44,26 +44,6 @@ html
         //console.log(getchannels.channels[0].id);
 
       }
-      function logOut() {
-      var auth2 = gapi.auth2.getAuthInstance();
-      if (auth2.isSignedIn.get()) {
-      auth2.signOut().then(function() {
-      console.log('User signed out.');
-      window.location.replace("login");
-      });
-      }
-      }
-      function onLoad() {
-      gapi.load('auth2', function() {
-      auth2 = gapi.auth2.init({
-      client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-      cookiepolicy: 'single_host_origin',
-      ux_mode: 'redirect',
-      redirect_uri: 'http://localhost:3000/home',
-      hosted_domain: 'mymacewan.ca',
-      });
-      });
-      }
     .wrapper
       // Sidebar
       nav#sidebar
@@ -74,9 +54,8 @@ html
           .row.justify-content-center
             .profile
               .row.justify-content-center
-                img(src='/images/donut.png')
-          h2.text-center  Username 
-          h3.text-center  Biography 
+                img#profilepic(src='/images/donut.png')
+          h2#profilename.text-center  username
         hr
         ul.list-unstyled.components
           li
@@ -146,66 +125,6 @@ html
           .message-section
             .message-section-title messages
             ul#message-list
-              li.message
-                img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
-                .divider
-                .messagegroup Group 1
-                span.status
-                  span.status-circle.green
-                  |  message snippet
-                .button-wrapper
-                  button.message-button.status-button.open Open
-                  .menu
-              li.message
-                img(src='/images/letters/letter-f.svg' alt='lettericon' width='40' height='40')
-                .divider
-                .messagegroup Group 2
-                span.status
-                  span.status-circle
-                  |  messgage snippet
-                .button-wrapper
-                  button.message-button.status-button Open
-                  .menu
-              li.message
-                img(src='/images/letters/letter-z.svg' alt='lettericon' width='40' height='40')
-                .divider
-                .messagegroup Group 3
-                span.status
-                  span.status-circle.green
-                  |  message snippet here
-                .button-wrapper
-                  button.message-button.status-button.open Open
-                  .menu
-              li.message
-                img(src='/images/letters/letter-h.svg' alt='lettericon' width='40' height='40')
-                .divider
-                .messagegroup Group 3
-                span.status
-                  span.status-circle.green
-                  |  message snippet here
-                .button-wrapper
-                  button.message-button.status-button.open Open
-                  .menu
-              li.message
-                img(src='/images/letters/letter-a.svg' alt='lettericon' width='40' height='40')
-                .divider
-                .messagegroup  Group 3
-                span.status
-                  span.status-circle.green
-                  |  message snippet here
-                .button-wrapper
-                  button.message-button.status-button.open Open
-                  .menu
-              li.message
-                img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
-                .divider
-                .messagegroup Group 3
-                span.status
-                  span.status-circle.green
-                  |  message snippet here
-                .button-wrapper
-                  button.message-button.status-button.open Open
-                  .menu
           .mesgs
             #chat.msg_history
               .incoming_msg
