--- a/server/views/discussions.jade
+++ b/server/views/discussions.jade
@@ -28,29 +28,6 @@ html
     script(type='text/javascript' src='/javascripts/sidebar.js')
 
   body
-    //google auth stuff
-    script.
-      function logOut() {
-        var auth2 = gapi.auth2.getAuthInstance();
-        if(auth2.isSignedIn.get()){
-          auth2.signOut().then(function () {
-            console.log('User signed out.');
-            window.location.replace("login");
-          });
-        }
-
-      }
-      function onLoad() {
-      gapi.load('auth2', function() {
-      auth2 = gapi.auth2.init({
-        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-        cookiepolicy: 'single_host_origin',
-        ux_mode: 'redirect',
-        redirect_uri: 'http://localhost:3000/home',
-        hosted_domain: 'mymacewan.ca',
-      });
-      });
-      }
     .wrapper
       // Sidebar
       nav#sidebar
@@ -61,9 +38,8 @@ html
           .row.justify-content-center
             .profile
               .row.justify-content-center
-                img(src='/images/donut.png')
-          h2.text-center  Username 
-          h3.text-center  Biography 
+                img#profilepic(src='/images/donut.png')
+          h2#profilename.text-center  username
         hr
         ul.list-unstyled.components
           li
