--- a/server/views/home.jade
+++ b/server/views/home.jade
@@ -28,51 +28,7 @@ html
     script(type='text/javascript' src='/javascripts/sidebar.js')
 
   body
-    //google auth stuff
-    script.
-      function logOut() {
-        var auth2 = gapi.auth2.getAuthInstance();
-        if(auth2.isSignedIn.get()){
-          auth2.signOut().then(function () {
-            console.log('User signed out.');
-            window.location.replace("login");
-          });
-        }
-
-      }
-      function onLoad() {
-      gapi.load('auth2', function() {
-      auth2 = gapi.auth2.init({
-        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-        cookiepolicy: 'single_host_origin',
-        ux_mode: 'redirect',
-        redirect_uri: 'https://localhost:3000/home',
-        hosted_domain: 'mymacewan.ca',
-      }).then(function(auth2){
-        if(auth2.isSignedIn.get()){
-          var profile=auth2.currentUser.get().getBasicProfile();
-          var id_token = profile.getId();
-          var data = JSON.stringify({
-            "token": id_token,
-          });  
-          var xhr = new XMLHttpRequest();
-          xhr.addEventListener("readystatechange", function () {
-            if (this.readyState === this.DONE) {
-              console.log(this.responseText);
-            }
-          });
-          xhr.open("POST", "https://localhost:3000/home/idtoken");
-          xhr.setRequestHeader("content-type", "application/json");
-          xhr.send(data);
-          var pic=document.getElementById('profilepic');
-          pic.src=profile.getImageUrl();
-          var pic=document.getElementById('profilename');
-          pic.innerText=profile.getName();
-          
-        }});
-      });
-      
-      }
+  
     .wrapper
       // Sidebar
       nav#sidebar
@@ -84,7 +40,7 @@ html
             .profile
               .row.justify-content-center
                 img#profilepic(src='/images/donut.png')
-          h2#profilename.text-center  Seth Thompson
+          h2#profilename.text-center  username
           h3.text-center  
         hr
         ul.list-unstyled.components
@@ -163,5 +119,5 @@ html
             | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
-    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoadHome' async='' defer='')
     
