--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -30,43 +30,5 @@ html(lang='en')
         input(type='submit' name='' value='Login')
         // google sign in button
         #my-signin2
-    script.
-      function logOut() {
-      var auth2 = gapi.auth2.getAuthInstance();
-      if (auth2.isSignedIn.get()) {
-      auth2.signOut().then(function() {
-      console.log('User signed out.');
-      window.location.replace("login");
-      });
-      }
-      }
-      function onLoad() {
-      gapi.load('auth2', function() {
-      auth2 = gapi.auth2.init({
-      client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-      cookiepolicy: 'single_host_origin',
-      ux_mode: 'redirect',
-      redirect_uri: 'https://localhost:3000/home',
-      hosted_domain: 'mymacewan.ca',
-      });
-      });
-      }
-      function onSuccess(googleUser) {
-      console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
-      }
-      function onFailure(error) {
-      console.log(error);
-      }
-      function renderButton() {
-      onLoad();
-      gapi.signin2.render('my-signin2', {
-      'scope': 'profile email',
-      'width': 240,
-      'height': 50,
-      'longtitle': true,
-      'theme': 'dark',
-      'onsuccess': onSuccess,
-      'onfailure': onFailure
-      });
-      }
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=renderButton' async='' defer='')
