--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -41,9 +41,8 @@ html
           .row.justify-content-center
             .profile
               .row.justify-content-center
-                img(src='/images/donut.png')
-          h2.text-center  Username
-          h3.text-center  Biography
+                img#profilepic(src='/images/donut.png')
+          h2#profilename.text-center  username
         hr
         ul.list-unstyled.components
           li
