--- a/server/views/settings.jade
+++ b/server/views/settings.jade
@@ -37,9 +37,8 @@ html
           .row.justify-content-center
             .profile
               .row.justify-content-center
-                img(src='/images/donut.png')
-          h2.text-center  Username 
-          h3.text-center  Biography 
+                img#profilepic(src='/images/donut.png')
+          h2#profilename.text-center  username
         hr
         ul.list-unstyled.components
           li
@@ -84,7 +83,7 @@ html
               i.fas.fa-cog
               | Settings
           li
-            a(href='login')
+            a(href='#' onclick='logOut();')
               i.fas.fa-sign-out-alt
               | Logout
       // Page Content
@@ -108,3 +107,5 @@ html
           a.btn.btn-primary(href='settings_edit') Edit
           .line
     .overlay
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
