--- a/server/views/discussions.jade
+++ b/server/views/discussions.jade
@@ -87,7 +87,7 @@ html
                 li
                   a(href='questions') Ask a Question
                 li 
-                  a(href='#') Search Questions
+                  a(href='questions_search') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -100,7 +100,7 @@ html
                 li
                   a(href='discussions') Discussion Board
                 li 
-                  a(href='messages') Group Chats
+                  a(href='chat') Group Chats
         hr
         ul.list-unstyled.components
           li
