--- a/server/views/queues.jade
+++ b/server/views/queues.jade
@@ -87,7 +87,7 @@ html
                 li
                   a(href='questions') Ask a Question
                 li
-                  a(href='messages') Search Questions
+                  a(href='questions_search') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -126,12 +126,14 @@ html
           // Search bar
           h3.text-center Available Professors
 
-          .d-flex.justify-content
+          .d-flex.justify-content-center
             for names in locals.data
               .card
-                img(src='/images/profile.png' alt='Avatar')
+                img(src='/images/person.png' alt='Avatar')
                 hr
                 .cardContainer
+                  h3.text-center
+                    a(href='schedule/'+ names.name) Check Schedule
                   if names.available == 1
                     h3.text-center #{names.name}
                     h4.text-center Available: Yes
@@ -158,5 +160,7 @@ html
                 h3.text-center Erwin Pascual
                 h4.text-center Computer Science
                 p.text-center Unemployed
+    .overlay
+
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
