--- a/server/public/stylesheets/login-page.css
+++ b/server/public/stylesheets/login-page.css
@@ -26,7 +26,7 @@ body,html{
 
 .loginBox{
     width: 320px;
-    height: 400px;
+    height: 420px;
     border-radius: 5%;
     background: #0f0f0f;
     color: #fff;
@@ -80,6 +80,7 @@ body,html{
     color: #fff;
     font-size: 20px;
     border-radius: 10px;
+    transition: .25s all ease;
 }
 
 .loginBox input[type="submit"]:hover
