--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -5,7 +5,6 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     title Maple Donut - Chat
-    
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINK
     // 4 - FAVICON LINK
@@ -13,7 +12,6 @@ html
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
     link(rel='stylesheet' href='/stylesheets/chat.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
-
     // 1 - FONT AWESOME SCRIPT
     // 2 - jQuery CDN - Slim version (=without AJAX)
     // 3 - Popper.JS
@@ -21,33 +19,48 @@ html
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
-    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
-    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
+    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js' integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ' crossorigin='anonymous')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js' integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm' crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
-
+    script(type='text/javascript' src='/javascripts/messages.js')
   body
-    //google auth stuff
+    // google auth stuff and chat message generation
     script.
-      function logOut() {
-        var auth2 = gapi.auth2.getAuthInstance();
-        if(auth2.isSignedIn.get()){
-          auth2.signOut().then(function () {
-            console.log('User signed out.');
-            window.location.replace("login");
-          });
-        }
+      //window.onload = init(!{channels});
+      window.addEventListener('DOMContentLoaded', function() {
+        init(!{channels});
+      });
 
+      function init(getchannels) {
+        getchannels.channels.forEach(addMessageGroup);
+        document.getElementById("messagesend").onclick=function(){
+          sendMessage(!{zoomtokn}.access_token,getchannels.channels[0].id,document.getElementById("messagecontent").value);
+          document.getElementById("messagecontent").value="";
+        };
+        
+        //addMessageGroup(getchannels.channels[0]);
+        //console.log(getchannels.channels[0].id);
+
+      }
+      function logOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      if (auth2.isSignedIn.get()) {
+      auth2.signOut().then(function() {
+      console.log('User signed out.');
+      window.location.replace("login");
+      });
+      }
       }
       function onLoad() {
       gapi.load('auth2', function() {
       auth2 = gapi.auth2.init({
-        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-        cookiepolicy: 'single_host_origin',
-        ux_mode: 'redirect',
-        redirect_uri: 'http://localhost:3000/home',
-        hosted_domain: 'mymacewan.ca',
+      client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
+      cookiepolicy: 'single_host_origin',
+      ux_mode: 'redirect',
+      redirect_uri: 'http://localhost:3000/home',
+      hosted_domain: 'mymacewan.ca',
       });
       });
       }
@@ -74,20 +87,24 @@ html
             a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-book
               | Courses
-              ul#coursesSubmenu.collapse.list-unstyled
-                li
-                  a(href='courses') Current Courses
-                li 
-                  a(href='#') Search Courses
+            ul#coursesSubmenu.collapse.list-unstyled
+              a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+              li
+                a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+                a(href='courses') Current Courses
+              li
+                a(href='#') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-question-circle
               | Questions
-              ul#questionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='questions') Ask a Question
-                li 
-                  a(href='#') Search Questions
+            ul#questionsSubmenu.collapse.list-unstyled
+              a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
+              li
+                a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
+                a(href='questions') Ask a Question
+              li
+                a(href='questions_search') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -96,11 +113,13 @@ html
             a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-comments
               | Discussions
-              ul#discussionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='discussions') Discussion Board
-                li 
-                  a(href='#') Group Chats
+            ul#discussionsSubmenu.collapse.list-unstyled
+              a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
+              li
+                a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
+                a(href='discussions') Discussion Board
+              li
+                a(href='#') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -117,41 +136,204 @@ html
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
+            button#add Add group
+            button#add2 Add Recieved
             .logo
               a(href='Home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
-        #content
-          .content-section
-            .content-section-title messages
-            ul
+        #content  
+          .message-section
+            .message-section-title messages
+            ul#message-list
               li.message
-                .messagegroup
-                  | Group 1
+                img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup Group 1
                 span.status
                   span.status-circle.green
-                  |         message snippet
+                  |  message snippet
                 .button-wrapper
-                  button.content-button.status-button.open Open
+                  button.message-button.status-button.open Open
                   .menu
               li.message
-                .messagegroup
-                  | Group 2
+                img(src='/images/letters/letter-f.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup Group 2
                 span.status
                   span.status-circle
-                  |         messgage snippet
+                  |  messgage snippet
                 .button-wrapper
-                  button.content-button.status-button Open
+                  button.message-button.status-button Open
                   .menu
               li.message
-                .messagegroup
-                  | Group 3
+                img(src='/images/letters/letter-z.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup Group 3
                 span.status
                   span.status-circle.green
-                  |         message snippet here
+                  |  message snippet here
                 .button-wrapper
-                  button.content-button.status-button.open Open
+                  button.message-button.status-button.open Open
                   .menu
+              li.message
+                img(src='/images/letters/letter-h.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup Group 3
+                span.status
+                  span.status-circle.green
+                  |  message snippet here
+                .button-wrapper
+                  button.message-button.status-button.open Open
+                  .menu
+              li.message
+                img(src='/images/letters/letter-a.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup  Group 3
+                span.status
+                  span.status-circle.green
+                  |  message snippet here
+                .button-wrapper
+                  button.message-button.status-button.open Open
+                  .menu
+              li.message
+                img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
+                .divider
+                .messagegroup Group 3
+                span.status
+                  span.status-circle.green
+                  |  message snippet here
+                .button-wrapper
+                  button.message-button.status-button.open Open
+                  .menu
+          .mesgs
+            #chat.msg_history
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | What do you call a factory that makes okay products?
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | I dont know
+              .incoming_msg
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p A satisfactory.
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | 3/10
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | What did the janitor say when he jumped out of the closet? Supplies!
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | pls stop
+              .incoming_msg
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | What did the ocean say to the beach? Nothing, it just waved.
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | Why do seagulls fly over the ocean? Because if they flew over the bay, we'd call them bagels.
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | I only know 25 letters of the alphabet. I don't know y.
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | What did one wall say to the other? I'll meet you at the corner.
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | What did the zero say to the eight? That belt looks good on you.
+              .incoming_msg
+                .incoming_msg_img
+                  img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
+                .received_msg
+                  .received_withd_msg
+                    .message_sender
+                      | Name
+                      span.time_date  11:01 AM | June 9
+                    p
+                      | What's the best thing about Switzerland? I don't know, but the flag is a big plus.
+            .type_msg
+              .input_msg_write
+                input#messagecontent.write_msg(type='text' placeholder='Type a message')
+                button#messagesend.msg_send_btn(type='button')
+                  img(src='/images/send.svg' alt='send' width='20' height='20')
 
     .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
