--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -122,8 +122,15 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-      
-
+          #courseContainer
+            h3.text-center Search Courses
+            .d-flex.justify-content-center.h-100
+              .container.h-100
+                .d-flex.justify-content-center.h-100
+                  .searchBar(id='search_bar')
+                    input.searchInput(id='search_input' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
+                    button.searchIcon(type='submit')
+                      i.fas.fa-search
             hr
             h3.text-center Your Courses
             .d-flex.justify-content-center
@@ -131,9 +138,6 @@ html
                 .card(id='courseCard')
                   .cardContainer(id='courseCardContainer')
                     a(href='professors/'+courses.course_name) #{courses.course_name}
-
-
-
 
     .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
