--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -46,9 +46,10 @@ html(lang='en')
       client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
       cookiepolicy: 'single_host_origin',
       ux_mode: 'redirect',
-      redirect_uri: 'http://localhost:3000/home',
+      redirect_uri: 'https://localhost:3000/home',
       hosted_domain: 'mymacewan.ca',
       });
+    
       });
       }
       function onSuccess(googleUser) {
@@ -68,5 +69,7 @@ html(lang='en')
       'onsuccess': onSuccess,
       'onfailure': onFailure
       });
+
       }
+
     script(src='https://apis.google.com/js/platform.js?onload=renderButton' async='' defer='')
