fixed bugs on professor pages

--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -110,7 +110,7 @@ html
                 .d-flex.justify-content-center.h-100
                   .searchBar(id='search_bar')
                     input.searchInput(id='search_input' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
-                    button.searchIcon(type='submit')
+                    button.searchIcon(id='search_icon' type='submit')
                       i.fas.fa-search
             hr
             h3.text-center Your Courses
