--- a/server/public/stylesheets/prof_courses.css
+++ b/server/public/stylesheets/prof_courses.css
@@ -5,6 +5,8 @@
 @import './layout/scrollbar.css';
 @import './layout/sidebar.css';
 @import './layout/searchbar.css';
+@import './layout/combobox.css';
+
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -41,7 +43,16 @@ a:focus {
     font-family: 'Roboto', sans-serif;
 }
 
+#content h1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+}
+
 #content h3{
+    margin: 0px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 22px;
@@ -49,10 +60,19 @@ a:focus {
     color: #FCA926;
     text-shadow: 0px 1px 2px rgb(197, 161, 119)
 }
+
+#content h4{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #eeeeeecc;
+    text-shadow: 0px 1px 2px rgb(111, 111, 111)
+}
+
 #courseCard {
     margin: 10px;
     padding: 10px;
-    width: 200px;
+    width: 220px;
     background-color: #252525;
     box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
     transition: 0.3s;
@@ -67,8 +87,45 @@ a:focus {
 
 #courseCard:hover {
     background-color: #353b48;
-    opacity: 0.8;
     box-shadow: 0 0px 8px 0 #FCA926;
 }
 
+.title_container {
+    height: 60px;
+}
 
+#options_text{
+    font-size: 12px;
+}
+
+#no_margin_line_break{
+    margin: 0px;
+}
+
+#no_margin_paragraph{
+    margin: 0px;
+}
+
+#card_text{
+    font-size: 15px;
+}
+
+/* COMBO BOX PROPERTY @OVERRIDE */
+.select {
+    position: relative;
+    display: flex;
+    width: 250px;
+    height: 3em;
+    line-height: 3;
+    background: #252525;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+select {
+    flex: 1;
+    text-align-last: auto;
+    font-size: 18px;
+    color: #bbbbbb;
+    cursor: pointer;
+}
