--- a/server/public/stylesheets/prof_questions.css
+++ b/server/public/stylesheets/prof_questions.css
@@ -22,7 +22,7 @@ p {
     font-size: 1.1em;
     font-weight: 400;
     line-height: 1.7em;
-    color: rgba(0, 0, 0, 0.5);
+    color: #eeeeee;
 }
 
 a,
@@ -32,14 +32,6 @@ a:focus {
     text-decoration: none;
     transition: all 0.3s;
 }
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
-}
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -55,7 +47,16 @@ a:focus {
     font-family: 'Roboto', sans-serif;
 }
 
-#content h2 {
+#content h1{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+}
+
+#content h3{
+    margin: 0px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 22px;
@@ -64,77 +65,65 @@ a:focus {
     text-shadow: 0px 1px 2px rgb(197, 161, 119)
 }
 
-
-#content h5 {
+#content h4{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    letter-spacing: 1px;
-    color: #FCA926;
-    text-shadow: 0px 1px 2px rgb(197, 161, 119)
-}
-
-#content a.list-group-item {
-    background-color: #f7f6e7;
-    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+    font-size: 20px;
+    color: #eeeeeecc;
+    text-shadow: 0px 1px 2px rgb(111, 111, 111)
 }
 
 /* ---------------------------------------------------
     CARD STYLE
 ----------------------------------------------------- */
 
-.searchResultContainer{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.card{
-    padding: 15px;
-    margin: 15px;
-    width: 600px;
+#courseCard {
+    margin: 10px;
+    padding: 10px;
+    width: 220px;
     background-color: #252525;
     box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
-}
+    transition: 0.3s;
+    border-radius: 5px;
 
-.card h3{
+    text-align: center;
+    font-size: 20px;
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 22px;
-    letter-spacing: 1px;
-    color: #FCA926;
+    color: #F7F6E7;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119);
 }
 
-.card p{
-    margin-bottom: 2px;
-    font-weight: 400;
-    font-size: 18px;
-    color: #eeeeeecc;
-    text-shadow: 0px 1px 2px rgb(111, 111, 111);
-    letter-spacing: 1px;
+#courseCard:hover {
+    background-color: #353b48;
+    box-shadow: 0 0px 8px 0 #FCA926;
 }
 
-#desc_header{
+.title_container {
+    height: 60px;
+}
+
+#options_text{
+    font-size: 12px;
+}
+
+.title_container {
+    height: 60px;
+}
+
+#options_text{
+    font-size: 12px;
+}
+
+#no_margin_line_break{
     margin: 0px;
-    font-weight: 400;
-    font-style: oblique;
-    font-size: 18px;
-    color: #eeeeee;
-    text-shadow: 0px 1px 2px rgb(111, 111, 111);
-    letter-spacing: 1px;
 }
 
-#content .cardContainer h4{
-    margin-bottom: 0px;
-    font-weight: 400;
-    font-size: 18px;
-    color: #eeeeeecc;
-    text-shadow: 0px 1px 2px rgb(111, 111, 111);
-    letter-spacing: 1px;
+#no_margin_paragraph{
+    margin: 0px;
 }
 
-#hr_light{
-    color: #eeeeeecc;
+#card_text{
+    font-size: 15px;
 }
 
 /* COMBO BOX PROPERTY @OVERRIDE */
