--- a/server/views/prof_courses.jade
+++ b/server/views/prof_courses.jade
@@ -11,7 +11,7 @@ html
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/courses.css')
+    link(rel='stylesheet' href='/stylesheets/prof_courses.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -26,31 +26,10 @@ html
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
 
   body
-    //google auth stuff
-    script.
-      function logOut() {
-        var auth2 = gapi.auth2.getAuthInstance();
-        if(auth2.isSignedIn.get()){
-          auth2.signOut().then(function () {
-            console.log('User signed out.');
-            window.location.replace("login");
-          });
-        }
-
-      }
-      function onLoad() {
-      gapi.load('auth2', function() {
-      auth2 = gapi.auth2.init({
-        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-        cookiepolicy: 'single_host_origin',
-        ux_mode: 'redirect',
-        redirect_uri: 'http://localhost:3000/home',
-        hosted_domain: 'mymacewan.ca',
-      });
-      });
-      }
     .wrapper
       // Sidebar
       nav#sidebar
@@ -61,46 +40,23 @@ html
           .row.justify-content-center
             .profile
               .row.justify-content-center
-                img(src='/images/donut.png')
-          h2.text-center  Username
-          h3.text-center  Biography
+                img#profilepic(src='/images/donut.png')
+          h2#profilename.text-center Seth Thompson
+          h3.text-center  
         hr
         ul.list-unstyled.components
           li
-            a(href='home')
+            a(href='prof_home')
               i.fas.fa-home
               | Home
-          li.active
-            a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='prof_courses')
               i.fas.fa-book
               | Courses
-              ul#coursesSubmenu.collapse.list-unstyled
-                li
-                  a(href='courses') Current Courses
-                li
-                  a(href='#') Search Courses
-          li.active
-            a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='prof_questions')
               i.fas.fa-question-circle
               | Questions
-              ul#questionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='questions') Ask a Question
-                li
-                  a(href='questions_search') Search Questions
-          li
-            a(href='professors')
-              i.fas.fa-chalkboard-teacher
-              | Professors
-          li.active
-            a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
-              i.fas.fa-comments
-              | Discussions
-              ul#discussionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='discussions') Discussion Board
-                li
-                  a(href='chat') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -118,27 +74,49 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='prof_home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
           #courseContainer
-            h3.text-center Search Courses
-            .d-flex.justify-content-center.h-100
-              .container.h-100
-                .d-flex.justify-content-center.h-100
-                  .searchBar(id='search_bar')
-                    input.searchInput(id='search_input' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
-                    button.searchIcon(type='submit')
-                      i.fas.fa-search
+            h1.text-center Current Courses
             hr
-            h3.text-center Your Courses
-            .d-flex.justify-content-center
-              for courses in locals.data
-                .card(id='courseCard')
-                  .cardContainer(id='courseCardContainer')
-                    a(href='professors/'+courses.course_name) #{courses.course_name}
+            .d-flex.justify-content-center.h-100
+              if locals.courseData != null
+                for courses in locals.courseData
+                  .card(id='courseCard')
+                    h3.text-center #{courses.course_name}
+                    .title_container(id='cardTitle')
+                      p(id='card_text').text-center  #{courses.course_title}
+                    hr(id='no_margin_line_break')
+                    p(id='no_margin_paragraph').text-center 
+                      small 
+                        small 
+                          small COURSE OPTIONS
+                    .cardContainer(id='cardOptions')
+                      button.btn.btn-info.btn-block
+                        a(href='#') Edit Schedule
+                      button.btn.btn-danger.btn-block
+                        a(href='#') Check Questions
+              else
+                br
+                h4#desc.text-center You currently are not teaching any courses :(
+          br
+          br
+          br
+          br
+          h3.text-center Add a Course
+          br
+          .d-flex.justify-content-center
+            // ------------------------------ //
+            // Select Course ComboBox
+            // ------------------------------ //
+            .select
+              select(name="course_combobox" id="courseComboBox")
+                option(selected) Select a Course
+                if locals.data != Null
+                  for courses in locals.data
+                    option(type='text' value=courses.course_id) #{courses.course_name}
 
     .overlay
-    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
-    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
+
