--- a/server/views/prof_questions.jade
+++ b/server/views/prof_questions.jade
@@ -41,46 +41,23 @@ html
           .row.justify-content-center
             .profile
               .row.justify-content-center
-                img(src='/images/donut.png')
-          h2.text-center  Username
-          h3.text-center  Biography
+                img#profilepic(src='/images/donut.png')
+          h2#profilename.text-center Seth Thompson
+          h3.text-center  
         hr
         ul.list-unstyled.components
           li
-            a(href='home')
+            a(href='prof_home')
               i.fas.fa-home
               | Home
-          li.active
-            a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='prof_courses')
               i.fas.fa-book
               | Courses
-              ul#coursesSubmenu.collapse.list-unstyled
-                li
-                  a(href='courses') Current Courses
-                li
-                  a(href='#') Search Courses
-          li.active
-            a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
+          li
+            a(href='prof_questions')
               i.fas.fa-question-circle
               | Questions
-              ul#questionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='questions') Ask a Question
-                li
-                  a(href='questions_search') Search Questions
-          li
-            a(href='professors')
-              i.fas.fa-chalkboard-teacher
-              | Professors
-          li.active
-            a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
-              i.fas.fa-comments
-              | Discussions
-              ul#discussionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='discussions') Discussion Board
-                li 
-                  a(href='chat') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -98,45 +75,50 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='prof_home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          br
-          br
-          br
-          br
-          h2.text-center Have a question? We'll try to find an answer!
-          .container.h-100
-            form(action='/questions_search' method='post')
-              .d-flex.justify-content-center
-                .searchBar(id='search_bar')
-                  input.searchInput(id='search_input' type='text' name='question_search' placeholder='e.g. What is Supervised learning?')
-                  button.searchIcon(id='search_icon' type='submit')
-                    i.fas.fa-search
-              .d-flex.justify-content-center
-                .select
-                  select(name="filter_combobox" id="filterComboBox")
-                    option(selected='selected' value='question_title') Search by
-                    option(type='text' value='question_title') Title
-                    option(type='text' value='label') Label/Tag
-                    option(type='text' value='question_desc') Description
-                    option(type='text' value='course_name') Course
-                .select(id="sort_combobox")
-                  select(name="sort_combobox" id="sortComboBox")
-                    option(selected='selected' value='') Sort by
-                    option(type='text' value='question_id') Recent
-
+          #courseContainer
+            h1.text-center Questions
             hr
-            //- .searchResultContainer
-            //-   if locals.data != Null
-            //-     for questions in locals.data
-            //-       if questions.question_title != Null
-            //-         .card
-            //-           h3.text-center #{questions.question_title}
-            //-           p.text-center  Label: #{questions.label} | Course: #{questions.course_name}
-            //-           hr(id='hr_light')
-            //-           .cardContainer
-            //-             p(id='desc_header').text-center Description:
-            //-             h4.text-center #{questions.question_desc}
+            .d-flex.justify-content-center.h-100
+              if locals.courseData != null
+                for courses in locals.courseData
+                  .card(id='courseCard')
+                    h3.text-center #{courses.course_name}
+                    .title_container(id='cardTitle')
+                      p(id='card_text').text-center  #{courses.course_title}
+                    if locals.count != null
+                      for count in locals.count
+                        if courses.course_id == count.course_id
+                          hr(id='no_margin_line_break')
+                          p.text-center 
+                            small 
+                              small QUESTION STATUS
+                          h1.text-center #{count.questionCounts}
+                          p(id='no_margin_paragraph').text-center 
+                            small 
+                              small Questions Unanswered
+                          hr
+                          .cardContainer(id='cardOptions')
+                            button.btn.btn-success.btn-block
+                              a(href='#') Answer Questions
+                        else 
+                          hr(id='no_margin_line_break')
+                          p.text-center 
+                            small 
+                              small QUESTION STATUS
+                          h1.text-center 0
+                          p(id='no_margin_paragraph').text-center 
+                            small 
+                              small Questions Unanswered
+                          hr
+                          .cardContainer(id='cardOptions')
+                            button.btn.btn-danger.btn-block(disabled)
+                              a(href='#') No Questions to Answer
+
+              else
+                br
+                h4#desc.text-center You currently are not teaching any courses :(
     .overlay
