Added functionality to all professor pages

--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -13,9 +13,12 @@ html(lang='en')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
     link(rel='stylesheet' type='text/css' href='/stylesheets/login-page.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
-    // JQUERY LINKS
+    // 1,2 - JQUERY SCRIPTS
+    // 3,4 - GOOGLE AUTH SCRIPTS
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=renderButton' async='' defer='')
   body
     .background-image
     .loginBox
@@ -30,5 +33,4 @@ html(lang='en')
         input(type='submit' name='' value='Login')
         // google sign in button
         #my-signin2
-    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
-    script(src='https://apis.google.com/js/platform.js?onload=renderButton' async='' defer='')
+
