--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -148,10 +148,10 @@ html
             // Submit Button for Form
             // ------------------------------ //
             .d-xl-flex.justify-content-center.h-100
-              button(type='submit' id='submit_button') Submit Question
+              button.btn.btn-success(type='submit' id='submit_button') Submit Question
                 i.fab.fa-telegram-plane
               .col-md-auto
-              button(type='reset' id='clear_button') Clear
+              button.btn.btn-danger(type='reset' id='clear_button') Clear
                 i.fas.fa-trash
           br
           br
