--- a/server/public/stylesheets/login-page.css
+++ b/server/public/stylesheets/login-page.css
@@ -58,7 +58,8 @@ body,html{
 
 .loginBox input{
     width: 100%;
-    margin-bottom: 20px;
+    height: 40px;
+    margin-bottom: 18px;
 }
 
 .loginBox input[type="text"], input[type="password"]
@@ -79,7 +80,7 @@ body,html{
     outline: none;
     color: #fff;
     font-size: 20px;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: .25s all ease;
 }
 
