--- a/server/public/stylesheets/prof_answer-question.css
+++ b/server/public/stylesheets/prof_answer-question.css
@@ -19,10 +19,11 @@ h2 {
 
 p {
     font-family: 'Roboto', sans-serif;
+    margin: 2px;
     font-size: 1.1em;
     font-weight: 400;
     line-height: 1.7em;
-    color: #ddd;
+    color: #eeeeee;
 }
 
 a,
@@ -32,14 +33,6 @@ a:focus {
     text-decoration: none;
     transition: all 0.3s;
 }
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
-}
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -55,42 +48,32 @@ a:focus {
     font-family: 'Roboto', sans-serif;
 }
 
-#page #navbar-header h3{
+#content h1{
     font-family: 'Roboto', sans-serif;
-    font-weight: 600;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+}
+
+#content h2{
+    margin: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
     font-size: 28px;
-    padding-top: 5px;
-    letter-spacing: 2px;
-    color: #FFF;
-    text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
-
-}
-#questionAskInput{
-    width: 90%;
-    background-color: #181818;
+    letter-spacing: 1px;
+    color: #eeeeee;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119)
 }
 
-.card{
-    background-color: #181818;
-    box-shadow: 0 2px 4px 0 rgba(111,111,111,0.2);
-}
-
-#content h2 {
+#content h3{
+    margin: 0px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 22px;
     letter-spacing: 1px;
     color: #FCA926;
     text-shadow: 0px 1px 2px rgb(197, 161, 119)
-}
-
-#content h3{
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 22px;
-  letter-spacing: 1px;
-  color: #FCA926;
-  text-shadow: 0px 1px 2px rgb(197, 161, 119)
 }
 
 #content h4{
@@ -101,44 +84,67 @@ a:focus {
     text-shadow: 0px 1px 2px rgb(111, 111, 111)
 }
 
-#content h5 {
+#content h5{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    letter-spacing: 1px;
-    color: #FCA926;
-    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+    font-size: 24px;
+    color: #eeeeeecc;
+    text-shadow: 0px 1px 2px rgb(111, 111, 111)
 }
 
-#hr_modified{
-    color: transparent;
+
+/* ---------------------------------------------------
+    LIST CARD STYLE
+----------------------------------------------------- */
+
+#link_card_active{
+    width: 1000px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
-#content a.list-group-item {
-    background-color: #f7f6e7;
-    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+#question_card_desc{
+    margin: 5px;
+    padding-left: 20px;
 }
-#prepend {
-    background-color: #353b48;;
-    border: none;
-    color: #f7f6e7;
-} 
+
+#no_margin_line_break{
+    margin: 0px;
+}
+
+#no_margin_paragraph{
+    margin: 0px;
+}
+
+/* ---------------------------------------------------
+    TEXT AREA STYLE
+----------------------------------------------------- */
 
 #textArea {
-    max-width: 550px;
-    max-height: 300px;
+    max-width: 1000px;
+    height: 200px;
+    resize: none;
     padding: 20px;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
+    text-align: center;
     background-color: #252525;
     border: none;
     border-radius: 10px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
     color: #eeeeeecc;
     font-size: 18px;
     transition: .25s all ease;
 }
+
 #textArea:hover{
     opacity: 0.8;
 }
+
+/* ---------------------------------------------------
+    BUTTON STYLE
+----------------------------------------------------- */
 
 #submit_button {
     font-size: 20px;
@@ -148,7 +154,6 @@ a:focus {
     padding: 5px;
     transition: .25s all ease;
 }
-
 
 #clear_button {
     font-size: 20px;
@@ -162,8 +167,4 @@ a:focus {
 button i{
     padding-left: 10px;
     font-size: 20px;
-}
-
-#list_group {
-    background-color: #353b48;
 }
