--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Courses
+    title Maple Donut - Courses Overview
 
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINK
