--- a/server/views/prof_home.jade
+++ b/server/views/prof_home.jade
@@ -27,7 +27,7 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
-    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoadProfHome' async='' defer='')
 
   body
     .wrapper
